...
          child: Image.asset("assets/coil_image.jpeg", fit: BoxFit.scaleDown,)
      ),
      ElevatedButton(onPressed: ()=> Navigator.of(context).push(
          MaterialPageRoute(builder: (c) => const HomePage())
      ),
        style: ElevatedButton.styleFrom(shape: BeveledRectangleBorder(borderRadius: BorderRadius.circular(Spacing.x4)), minimumSize: const Size(250, 55)),
        child: const Text("Open Estimator", style: TextStyle(fontSize: 22, fontWeight: FontWeight.bold),),)
    ]))
  ]));

}
